@@ -86,7 +86,26 @@ jar {
         attributes 'Created-By': 'Copyright(c) 2013-2020 huangyuhui.',
                 'Main-Class': mainClassName,
                 'Multi-Release': 'true',
-                'Implementation-Version': version
+                'Implementation-Version': version,
+                'Add-Opens': [
+                        'java.base/java.lang.reflect',
+                        'javafx.graphics/javafx.css',
+                        'javafx.base/com.sun.javafx.runtime',
+                        'javafx.controls/com.sun.javafx.scene.control.behavior',
+                        'javafx.controls/javafx.scene.control.skin',
+                        'javafx.controls/com.sun.javafx.scene.control',
+                        'javafx.base/com.sun.javafx.binding',
+                        'javafx.base/com.sun.javafx.event',
+                        'javafx.graphics/com.sun.javafx.stage'
+                ].join(" "),
+                'Add-Exports': [
+                        'javafx.controls/com.sun.javafx.scene.control.behavior',
+                        'javafx.controls/javafx.scene.control.skin',
+                        'javafx.controls/com.sun.javafx.scene.control',
+                        'javafx.base/com.sun.javafx.binding',
+                        'javafx.graphics/com.sun.javafx.stage',
+                        'javafx.base/com.sun.javafx.event'
+                ].join(" ")
     }
     finalizedBy shadowJar
 }
